edition = "2023";  // successor to proto2 and proto3

package central;

import "google/protobuf/timestamp.proto";

option go_package = "./internalapi/central;central";

message ServiceCertAuth {
  bytes cert_der = 1;
  google.protobuf.Timestamp current_time = 2;
}
